Mon Dec  1 14:07:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/mpc-mode.el:
          Updated MPC mode for emacs file. Thanks to Jules Colding
          <colding at 42tools dot com> for providing this file

Mon Dec  1 13:46:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Object_Manager.cpp:
          Initialise pointers with 0

        * ace/RW_Mutex.cpp:
        * ace/RW_Mutex.h:
        * ace/RW_Mutex.inl:
          Make removed_ flag a real bool

        * ace/Singleton.h:
          Doxygen change

        * ace/SSL/SSL_Context.cpp:
          Manage ourselves the life cycle of the SSL_Context singleton. Previously
          the SSL library registered a singleton with the ACE library. When
          the SSL library is unloaded expliclity before the ACE library the
          cleanup in ACE did crash because the SSL code wasn't there. Now when we
          cleanup the SSL library we also close our singleton

        * ace/Thread_Mutex.inl:
          Use operator !

Mon Dec  1 11:15:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/mpc-mode.el:
          Added MPC mode for emacs file. Thanks to Jules Colding
          <colding at 42tools dot com> for providing this file

Mon Dec  1 11:01:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-ciao.txt:
          Improved OpenSuSE Factory support

Mon Dec  1 10:44:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Added 3418

Sat Nov 29 15:30:21 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/OS_NS_ctype.inl:

          Fix typo in preprocessor conditional.

        * configure.ac:
        * m4/ace_func.m4:

          Move feature tests for strtoll(), strtoull(), wcstoll(), and
          wcstoull() to new autoconf macros ACE_FUNC_STRTOLL,
          ACE_FUNC_STRTOULL, ACE_FUNC_WCSTOLL, and ACE_FUNC_WCSTOULL.
