@@ -1,3 +1,9 @@
+Mon Dec  1 15:36:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/mpc-mode.el:
+          Updated MPC mode for emacs file. Thanks to Jules Colding
+          <colding at 42tools dot com> for providing this file
+
 Mon Dec  1 14:07:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/mpc-mode.el:
